fix: Align settings titles to the left
The titles being right-aligned tended to be harder to read as they started at varying distances from the left. Isabella and hex both liked this change

--- a/styles/settings/settings_enum.css
+++ b/styles/settings/settings_enum.css
@@ -14,7 +14,7 @@ ChaosSettingsEnum #TitleContainer {
 
 ChaosSettingsEnum #title {
 	vertical-align: middle;
-	horizontal-align: right;
+	horizontal-align: left;
 }
 
 ChaosSettingsEnum #values {
