--- a/styles/settings/settings_enum_dropdown.css
+++ b/styles/settings/settings_enum_dropdown.css
@@ -20,7 +20,7 @@ ChaosSettingsEnumDropDown {
 
 #Title {
 	vertical-align: middle;
-	horizontal-align: right;
+	horizontal-align: left;
 }
 
 #DropDown {
