--- a/styles/settings/settings_slider.css
+++ b/styles/settings/settings_slider.css
@@ -20,7 +20,7 @@ ChaosSettingsSlider {
 
 #Title {
 	vertical-align: middle;
-	horizontal-align: right;
+	horizontal-align: left;
 }
 
 #Slider {
