--- a/styles/settings/settings_toggle.css
+++ b/styles/settings/settings_toggle.css
@@ -13,7 +13,7 @@ ChaosSettingsToggle #TitleContainer {
 
 ChaosSettingsToggle #Title {
 	vertical-align: middle;
-	horizontal-align: right;
+	horizontal-align: left;
 }
 
 ChaosSettingsToggle #Toggle {
